[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui_extras = "0.33.3"
serde = {  version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.3"
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_Memory", "Win32_System_LibraryLoader"] }
egui = "0.33.3"
chrono = "0.4.44"

[build-dependencies]
winres = "0.1.12"

